force-app/main/default/objects/npe03__Recurring_Donation__c/fields/DonorPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>DonorPaymentMethod__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Donor Payment Method</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DonorPaymentMethod__c.Contact__c</field>
            <operation>equals</operation>
            <valueField>$Source.npe03__Contact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DonorPaymentMethod__c</referenceTo>
    <relationshipLabel>Recurring Donations</relationshipLabel>
    <relationshipName>Recurring_Donations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>