force-app/main/default/objects/npe03__Recurring_Donation__c/fields/GC_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>GC_Installment_Amount__c</fullName>
    <label>GC Installment Amount</label>
    <length>10</length>
    <type>Text</type>
</CustomField>