force-app/main/default/objects/npe03__Recurring_Donation__c/fields/Households__c.field-meta.xml
<CustomField>
    <fullName>Households__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parish ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Parish</value>
        </filterItems>
        <filterItems>
            <field>$Source.npe03__Schedule_Type__c</field>
            <operation>equals</operation>
            <value>Divide By</value>
        </filterItems>
        <filterItems>
            <field>Account.Parish_ID__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recurring Donations (Parish ID)</relationshipLabel>
    <relationshipName>Recurring_Donations</relationshipName>
    <type>Lookup</type>
</CustomField>