force-app/main/default/objects/npe03__Recurring_Donation__c/validationRules/AmountValue.validationRule-meta.xml
<ValidationRule>
    <fullName>AmountValue</fullName>
    <active>true</active>
    <errorConditionFormula>npe03__Amount__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>npe03__Amount__c</errorDisplayField>
    <errorMessage>Please add correct value</errorMessage>
</ValidationRule>