force-app/main/default/objects/npe03__Recurring_Donation__c/validationRules/Installments.validationRule-meta.xml
<ValidationRule>
    <fullName>Installments</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( npe03__Installments__c )</errorConditionFormula>
    <errorDisplayField>npe03__Installments__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>