force-app/main/default/objects/npe03__Recurring_Donation__c/validationRules/InstallmentsValue.validationRule-meta.xml
<ValidationRule>
    <fullName>InstallmentsValue</fullName>
    <active>true</active>
    <errorConditionFormula>npe03__Installments__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>npe03__Installments__c</errorDisplayField>
    <errorMessage>Please add correct value</errorMessage>
</ValidationRule>