force-app/main/default/objects/npe03__Recurring_Donation__c/validationRules/NextDonationDate.validationRule-meta.xml
<ValidationRule>
    <fullName>NextDonationDate</fullName>
    <active>false</active>
    <errorConditionFormula>npe03__Next_Payment_Date__c   &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>npe03__Next_Payment_Date__c</errorDisplayField>
    <errorMessage>Next donation date can not be less then today date</errorMessage>
</ValidationRule>