force-app/main/default/objects/npe03__Recurring_Donation__c/validationRules/Parish_Id_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Parish_Id_check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL( npe03__Schedule_Type__c , &#39;Divide By&#39;),
    ISPICKVAL( Parish_Id__c,&#39;&#39; )
)</errorConditionFormula>
    <errorMessage>Please select Parish Id</errorMessage>
</ValidationRule>