force-app/main/default/objects/npe03__Recurring_Donation__c/validationRules/Parish_Id_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Parish_Id_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL( npe03__Schedule_Type__c , &#39;Divide By&#39;), 
ISBLANK( Households__c ) 
)</errorConditionFormula>
    <errorDisplayField>Households__c</errorDisplayField>
    <errorMessage>Please select a Parish ID.</errorMessage>
</ValidationRule>