force-app/main/default/objects/npe03__Recurring_Donation__c/validationRules/Schedule_Type_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Schedule_Type_Error</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(npe03__Schedule_Type__c) &lt;&gt; if( TEXT(npe03__Recurring_Donation_Campaign__r.Type) &lt;&gt; &#39;Pledged Events&#39; &amp;&amp; TEXT(npe03__Recurring_Donation_Campaign__r.Type) &lt;&gt; &#39;High Value&#39;, &#39;Multiply By&#39;, &#39;Divide By&#39;)</errorConditionFormula>
    <errorDisplayField>npe03__Schedule_Type__c</errorDisplayField>
    <errorMessage>Please select valid Schedule Type</errorMessage>
</ValidationRule>